[package]
name = "mercury_oxide_python"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mercury_oxide"
crate-type = ["cdylib"]


[dependencies]
liquid = "0.19.0"
serde = "*"
serde_derive = "*"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]